Inclusion of new graph for logged in users and z-index fixes throughout

--- a/yo/app/styles/main.css
+++ b/yo/app/styles/main.css
@@ -20,7 +20,8 @@ html,body, .cotainer-fluid,.row  {
 
 .pop-up, .tooltip{
   
-  z-index: 999999999;
+  z-index: 999999999 !important; 
+
 
 }
 
